<resources>
    <string name="app_name">Battery Charge Time Calculator</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_failed">Login falhou. Por favor, tente novamente.</string>
    <string name="battery_capacity_hint">Capacidade da Bateria (kW)</string>
    <string name="current_charge_hint">Atual Bateria(%)</string>
    <string name="calculate_button">Calcular</string>
    <string name="result_label">Tempo de carregamento:</string>
    <string name="result_text">Tempo de carregamento: %s horas</string>
    <string name="empty_fields_error">Por favor, preencha todos os campos.</string>
    <string name="invalid_number_error">Formato de número inválido.</string>
    <string name="invalid_charge_percentage">A bateria deve estar entre 0 e 100.</string>
    <string name="charging_current_label">Corrente de Carga</string>
    <string name="input_voltage_label">Tensão de Entrada</string>
    <string name="help_content">Aqui você encontrará informações sobre como usar o aplicativo...</string>
</resources>